OMS symbol, ednotes

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -655,9 +655,8 @@ The reader is encouraged to report any technical or editing issues/problems with
 
 
 \chapter{Scope}
-\ednote{compare the scope in 6.2 of the RFP}
 \pagenumbering{arabic} 
-This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OMSs for short). DOL is a language for distributed knowledge representation across multiple OMSs, particularly OMSs that have been formalized in different OMS languages.\ednote{we should say that we answer to the RFP --- see other OMG specs on how doing this}
+This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OMSs for short). DOL is a language for distributed knowledge representation across multiple OMSs, particularly OMSs that have been formalized in different OMS languages.\ednote{we should say that we answer to the RFP --- see other OMG specs on how doing this. Also: compare the scope in 6.2 of the RFP}
 
 DOL does not provide a new elementary OMS language, but provides a
 layer to be used on top of existing elementary OMS languages which
@@ -700,8 +699,7 @@ and sentences
 
 The following are outside the scope of this \IS:
 \begin{enumerate}
-\item the (re)definition of elementary OMS languages, \ie languages that allow the declaration of non-logical symbols 
-\CLnote[type=todo]{We somehow need to rephrase this (here and elsewhere); it reads quite ugly.  Maybe just say ``non-logical symbols''?  Or, if absolutely necessary, reorder the words into ``non-logical ontology symbols''.} 
+\item the (re)definition of elementary OMS languages, \ie languages that allow the declaration of OMS symbols (non-logical symbols) 
 and
 stating sentences about them
 \item algorithms for obtaining mappings between OMSs
@@ -939,6 +937,8 @@ We expect most DOL-aware applications to support a fixed (possibly extensible) s
 
 
 \chapter{Terms and Definitions}
+\ednote{OMG specifications shall not contain glossaries, hence always
+refer to this section if definitions of terms are needed.}
 
 For the purposes of this document, the following terms and definitions apply.
 
@@ -956,7 +956,7 @@ For the purposes of this document, the following terms and definitions apply.
     OMS languages include OWL, Common Logic, F-logic, UML class diagrams, RDFS, and OBO.
   \end{example}
   
-  \termdefinition{non-logical symbol}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}}
+  \termdefinition{non-logical symbol\synonym OMS symbol}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}}
   \begin{example}
     Non-logical symbols in OWL \nisref{W3C/TR REC-owl2-syntax:2009} (there called ``entities'') comprise
     \begin{itemize}
