--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1023,7 +1023,7 @@ For the purposes of this document, the following terms and definitions apply.
   \begin{example}
     Familiar examples include an electronic document, an image, a source of information with a consistent purpose (\eg, ``today's weather report for Los Angeles''), a service (\eg, an HTTP-to-SMS gateway), and a collection of other resources. A resource is not necessarily accessible via the Internet; \eg, human beings, corporations, and bound books in a library can also be resources. Likewise, abstract concepts can be resources, such as the operators and operands of a mathematical equation, the types of a relationship (\eg, ``parent'' or ``employee''), or numeric values (\eg, zero, one, and infinity). \nisref{IETF/RFC 3986:2005, Section 1.1}
   \end{example}
-  \termdefinition{element\subjectfield{OMS}\todonote[author=Christoph Lange,date=D:201111151622+01'00',type=fyi]{This term is adopted from OWL 2, where it is used, but in a non-normative context.}}{any \termref{resource} in an \termref{OMS} (\eg a \termref{non-logical symbol}, a \termref{sentence}, a \termref{correspondence}, the \termref{OMS} itself, ...) or a named set of such \termref{resources}}
+  \termdefinition{element\subjectfield{OMS}\todonote[author=Christoph Lange,date=D:201111151622+01'00',type=fyi]{This term is adopted from OWL 2, where it is used, but in a non-normative context. TM: in OWL2, the term is of course ``element ontology''. Is ``element OSM'' really useful?}}{any \termref{resource} in an \termref{OMS} (\eg a \termref{non-logical symbol}, a \termref{sentence}, a \termref{correspondence}, the \termref{OMS} itself, ...) or a named set of such \termref{resources}.}
   
   \termdefinition{linked data}{structured data that is published on the Web in a machine-processable way, according to principles specified in \bref{BernersLee:LinkedData2006}}
   \begin{note}
